Fix stacking order with z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,7 @@ header {
 nav {
     position: sticky;
     top: 0;
+    z-index: 100;
     padding: 1rem;
     display: flex;
     justify-content: space-between;
